[project]
name = "ytkit"
version = "1.0.0"
description = ""
authors = [
    {name = "Rahul Anand",email = "rahulanand1103@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "scrapetube (>=2.5.1,<3.0.0)",
    "youtube-transcript-api>=0.6.3,<0.7.0",
    "pydantic (>=2.10.4,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
